docs/book/samples/ch04/pocky.out
error[endpoint]: unhandled err reached main: "missing index "pocky""
  born in main at pocky.kso:2
