docs/book/samples/ch04/pocky.kso
menu = { "dango": 350 "taiyaki": 500 }
print "pocky: {menu["pocky"]!}"
